# MK-ServerLauncherDesktop

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Client.ui  README.md  client_Res.qrc  qt.cmake
CMSToolkit/include/: cms_toolkit_dll.hpp  cms_utils.hpp
Dark/: darkstyle.qrc  darkstyle.qss
lib/cmake/yaml-cpp/: yaml-cpp-targets-debug.cmake  yaml-cpp-targets-release.cmake  yaml-cpp-targets.cmake
lib/pkgconfig/: yaml-cpp.pc
src/: DarkTheme.hpp  FileGuy.cpp  FileGuy.hpp  Hasher.cpp  Hasher.hpp  MainWindow.cpp  MainWindow.hpp  WebSocketManager.cpp  WebSocketManager.hpp  main.cpp
